Branch combcuts: renamed the Cbc example tsp into tsp-subtour-mincut to avoid conflict with trunk

--- a/Cbc/examples/Makefile.in
+++ b/Cbc/examples/Makefile.in
@@ -146,7 +146,7 @@ CLEANFILES = $(EXTRAOBJS) \
 	simpleBAB.@OBJEXT@ simpleBAB@EXEEXT@ \
 	sos.@OBJEXT@ sos@EXEEXT@ \
 	sudoku.@OBJEXT@ sudoku@EXEEXT@ \
-	tsp.@OBJEXT@ tsp
+	tsp-subtour-mincut.@OBJEXT@ tsp-subtour-mincut
 
 all: $(EXE)
 
