--- a/.gitattributes
+++ b/.gitattributes
@@ -97,7 +97,7 @@ Cbc/examples/pool.cpp -text
 Cbc/examples/presolveBefore.cpp -text
 Cbc/examples/qmip2.cpp -text
 Cbc/examples/simpleBAB.cpp -text
-Cbc/examples/tsp.cpp -text
+Cbc/examples/tsp-subtour-mincut.cpp -text
 Cbc/examples/tsp_euclid_12.json -text
 Cbc/examples/utils.hh -text
 Cbc/install-sh -text
