--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,16 +15,16 @@ jobs:
     - name: dependencies
       run: sudo add-apt-repository ppa:ubuntu-toolchain-r/test ; sudo apt-get update ; sudo apt-get install gcc-9 libgcc-9-dev g++-9 gfortran-9 libgfortran-9-dev liblapack-dev libsuitesparse-dev libmetis-dev libnauty2-dev ; sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 90 ; sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 90 ; sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-9 90 ; sudo update-alternatives --install /usr/bin/cpp cpp /usr/bin/cpp-9 90
     - name: CoinBrew fetch
-      run: wget -nH https://raw.githubusercontent.com/coin-or/coinbrew/master/coinbrew ; chmod u+x coinbrew ; ./coinbrew fetch Cbc:${GITHUB_REF##*/} --no-prompt
+      run: wget -nH https://raw.githubusercontent.com/coin-or/coinbrew/master/coinbrew  --prefix=/home/runner/prog ; chmod u+x coinbrew ; ./coinbrew fetch Cbc:${GITHUB_REF##*/} --no-prompt
     - name: Build
-      run: ./coinbrew build Cbc:${GITHUB_REF##*/} --no-prompt --verbosity=4  --tests none
-    - name: where I am
-      run: pwd ; ls
-    - uses: "marvinpinto/action-automatic-releases@latest"
+      run: ./coinbrew build --prefix=/home/runner/prog Cbc:${GITHUB_REF##*/} --no-prompt --verbosity=4  --tests none
+      #- name: where I am
+      #run: pwd ; ls
+    - name: Compress
+      run: cd /home/runner/prog/ ; tar cvzf /home/runner/cbc-x86-64-linux-gcc9.tar.gz *
+    - name: Upload the artifacts
+      uses: skx/github-action-publish-binaries@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "master"
-        prerelease: true
-        title: "Development Build"
-        files: |
-          build/Cbc/master/src/.libs/*.{so}
+        args: '/home/runner/cbc-x86-64-linux-gcc9.tar.gz'
