--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     - name: dependencies
       run: sudo add-apt-repository ppa:ubuntu-toolchain-r/test ; sudo apt-get update ; sudo apt-get install libc6-dev libbz2-dev zlib1g-dev liblapack-dev libnauty2-dev 
     - name: download gcc with only static libraries
-      run: cd ~ ; wget -nH http://www.decom.ufop.br/haroldo/files/gcc-9.3-bionic-static.tar.xz ; cd  / ; sudo tar Jxf  /home/runner/gcc-9.3-bionic-static.tar.xz ; export PATH=/opt/gcc-9.3/bin:$PATH ; sudo ln -s /opt/gcc-9.3/bin/g++-9.3 /opt/gcc-9.3/bin/g++ ; sudo ln -s /opt/gcc-9.3/bin/gcc-9.3 /opt/gcc-9.3/bin/gcc ; sudo ln -s /opt/gcc-9.3/bin/cpp-9.3 /opt/gcc-9.3/bin/cpp ; sudo ln -s /opt/gcc-9.3/bin/gfortran-9.3 /opt/gcc-9.3/bin/gfortran 
+      run: cd ~ ; wget -nH http://www.decom.ufop.br/haroldo/files/gcc-9.3-bionic-static.tar.xz ; cd  / ; sudo tar Jxf  /home/runner/gcc-9.3-bionic-static.tar.xz ; export PATH=/opt/gcc-9.3/bin:$PATH ; sudo ln -s /opt/gcc-9.3/bin/g++-9.3 /opt/gcc-9.3/bin/g++ ; sudo ln -s /opt/gcc-9.3/bin/gcc-9.3 /opt/gcc-9.3/bin/gcc ; sudo ln -s /opt/gcc-9.3/bin/cpp-9.3 /opt/gcc-9.3/bin/cpp ; sudo ln -s /opt/gcc-9.3/bin/gfortran-9.3 /opt/gcc-9.3/bin/gfortran  ; sudo ln -s /opt/gcc-9.3/bin/gcc-ar-9.3 /opt/gcc-9.3/bin/gcc-ar ; sudo ln -s /opt/gcc-9.3/bin/gcc-nm-9.3 /opt/gcc-9.3/bin/gcc-nm ; sudo ln -s /opt/gcc-9.3/bin/gcc-ranlib-9.3 /opt/gcc-9.3/bin/gcc-ranlib
     - name: CoinBrew fetch
       run: wget -nH https://raw.githubusercontent.com/coin-or/coinbrew/master/coinbrew  ; chmod u+x coinbrew ; ./coinbrew fetch Cbc:${GITHUB_REF##*/} --no-prompt
       #- name: Separate static libraries
