--- a/Cbc/src/Makefile.in
+++ b/Cbc/src/Makefile.in
@@ -651,6 +651,7 @@ AM_CPPFLAGS = $(COINDEPEND_CFLAGS) $(CLP_CFLAGS) $(CPX_CFLAGS) \
 
 # Additional libraries
 @COIN_HAS_CLP_TRUE@cbc_LDADD = libCbcSolver.la libCbc.la $(CBCLIB_LIBS) $(ASL_LIBS)
+@CBC_BUILD_CBC_GENERIC_TRUE@cbc_LDFLAGS = $(LT_LDFLAGS)
 @COIN_HAS_CLP_TRUE@cbc_LDFLAGS = $(LT_LDFLAGS)
 @COIN_HAS_CLP_TRUE@cbc_DEPENDENCIES = libCbcSolver.la libCbc.la $(CBCLIB_DEPENDENCIES) $(ASL_DEPENDENCIES)
 
